--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="assets/css/menu-princ.css">
+  <title>Hades | Página Inicial</title>
 </head>
 <body>
-  hello word
-  
+  <header>
+    <nav>
+      <div class="h-logo">
+        <img src="assets/img/icons/Hades_logo.png" alt="Hades Logo">
+      </div>
+      <div class="h-itens">
+        <ul>
+          <li><a href="#">Página Inicial</a></li>
+          <li><a href="#">Desenvolvedora</a></li>
+          <li><a href="#">Sobre nós</a></li>
+        </ul>
+      </div>
+      <div class="h-midias-sociais"></div>
+    </nav>
+
+  </header>
+
+
+  <main></main>
+
+
+
+
+  <footer></footer>
 </body>
 </html>
