add news modifield

--- a/index.html
+++ b/index.html
@@ -13,15 +13,25 @@
       <div class="h-logo">
         <img src="assets/img/icons/Hades_logo.png" alt="Hades Logo">
       </div>
-      <div class="h-itens">
-        <ul>
-          <li><a href="#">Página Inicial</a></li>
-          <li><a href="#">Desenvolvedora</a></li>
-          <li><a href="#">Sobre nós</a></li>
-        </ul>
+      <div class="h-menu">
+        <div class="h-itens">
+          <ul>
+            <li><a href="#">Página Inicial</a></li>
+            <li><a href="#">Desenvolvedora</a></li>
+            <li><a href="#">Sobre nós</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="h-midias-sociais"></div>
     </nav>
+    <div class="h-wrapper">
+      <div class="h-wrapper-image">
+        <img src="assets/img/wallpaper-hades-game.jpg" alt="">
+      </div>
+      <div class="h-container-news">
+        <div class="column-news">
+        </div>
+      </div>
+    </div>
 
   </header>
 
