--- a/index.html
+++ b/index.html
@@ -37,8 +37,21 @@
 
 
   <main></main>
+  <div class="topics-images">
+    <img src="assets/img/aphrodite.png" alt="">
 
-
+  </div>
+  <div class="b-container">
+    <div class="products-grid">
+    <div class="itemgrid">
+      <p>Jogo Base</p>
+        <img src="assets/img/Hades_PackArt.jpg" alt=""
+        style="width: 100%; height: auto;"></div>
+        <div class="itemgrid"><p style="position: relative; top: 5rem;">	Desafie o deus dos mortos enquanto você batalha para sair do Submundo neste jogo roguelike dos mesmos criadores de Bastion, Transistor e Pyre.</p></dd></div>
+        <div class="itemgrid" style="vertical-align: middle; display: flex; justify-content: center;border-left: 2px solid rgb(80, 19, 19);">
+          <button class="genericButton buy1" style="position: relative; top: 3rem;">COMPRAR</button> <br> </div>
+      </div>
+  </div>
 
 
   <footer></footer>
