set background in buy-game

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/menu-princ.css">
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <title>Hades | Página Inicial</title>
 </head>
 <body>
@@ -21,37 +23,52 @@
             <li><a href="#">Sobre nós</a></li>
           </ul>
         </div>
+        <div class="h-bar-line"></div>
+        <div class="h-buy-cart">
+          <a href="#">
+            <span class="icon">
+              <ion-icon name="cart-outline"></ion-icon>
+            </span>
+            <span class="text">Carrinho</span>
+          </a>
+        </div>
       </div>
     </nav>
     <div class="h-wrapper">
       <div class="h-wrapper-image">
         <img src="assets/img/wallpaper-hades-game.jpg" alt="">
       </div>
-      <div class="h-container-news">
-        <div class="column-news">
-        </div>
+      <div class="h-wrapper-container">
+      
       </div>
     </div>
-
   </header>
 
 
-  <main></main>
-  <div class="topics-images">
-    <img src="assets/img/aphrodite.png" alt="">
-
-  </div>
-  <div class="b-container">
-    <div class="products-grid">
-    <div class="itemgrid">
-      <p>Jogo Base</p>
-        <img src="assets/img/Hades_PackArt.jpg" alt=""
-        style="width: 100%; height: auto;"></div>
-        <div class="itemgrid"><p style="position: relative; top: 5rem;">	Desafie o deus dos mortos enquanto você batalha para sair do Submundo neste jogo roguelike dos mesmos criadores de Bastion, Transistor e Pyre.</p></dd></div>
-        <div class="itemgrid" style="vertical-align: middle; display: flex; justify-content: center;border-left: 2px solid rgb(80, 19, 19);">
-          <button class="genericButton buy1" style="position: relative; top: 3rem;">COMPRAR</button> <br> </div>
+  <main>
+    <div class="h-buy-game">
+      <div class="background-image-main">
+        <img src="assets/img/hades-game-01.jpg" alt="">
+      </div>    
+      <div class="topics-images">
+        <img src="assets/img/aphrodite.png" alt="">
+    
       </div>
-  </div>
+      <div class="b-container">
+        <div class="products-grid">
+        <div class="itemgrid">
+          <p class="title-game">Jogo Base</p>
+            <img src="assets/img/Hades_PackArt.jpg" alt="Jogo Base"
+            style="width: 100%; height: auto;"></div>
+            <div class="itemgrid"><p style="position: relative; top: 5rem;">	Desafie o deus dos mortos enquanto você batalha para sair do Submundo neste jogo roguelike dos mesmos criadores de Bastion, Transistor e Pyre.</p></dd></div>
+            <div class="itemgrid" style="vertical-align: middle; display: flex; justify-content: center;border-left: 2px solid rgb(80, 19, 19);">
+              <button class="genericButton buy1" style="position: relative; top: 3rem;">COMPRAR</button> <br> </div>
+          </div>
+      </div>
+    </div>
+
+   
+  </main>
 
 
   <footer></footer>
