Add news divs in index.html and more one div for media-video

--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
         <img src="assets/img/wallpaper-hades-game.jpg" alt="">
       </div>
       <div class="h-wrapper-container">
+        <h1 class="top-title-game" style="font-size: 2.5rem;">Hades | Jogo Eletrônico</h1>
+        <p class="game-description" style="text-align: center;">Hades é um jogo eletrônico roguelike de RPG de ação desenvolvido e publicado pela Supergiant Games. Foi lançado para Microsoft Windows, macOS e Nintendo Switch em 17 de setembro de 2020, após um lançamento de acesso antecipado em dezembro de 2018.</p>
       
+      </div>
+      <div class="h-media-video">
+        <video src=""></video>
       </div>
     </div>
   </header>
