--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="assets/img/icons/favicon.ico" type="image/x-icon">
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script type="text/javascript" src="assets/js/script.js"></script>>
   <title>Hades | Página Inicial</title>
 </head>
 <body>
@@ -26,16 +27,14 @@
           </ul>
         </div>
         <div class="h-bar-line"></div>
-        <div class="h-buy-cart">
-          <a href="#">
-            <span class="icon">
-              <ion-icon name="cart-outline"></ion-icon>
-            </span>
-            <span class="text">Carrinho</span>
-          </a>
-        </div>
       </div>
     </nav>
+    <div class="cart-window" id="cart-window" style="display: none;">
+      <button class="genericButton close"><ion-icon name="close-outline" style="width: 3rem; height: 3rem;" onclick="remove1()"></ion-icon></button>
+      <img src="assets/img/Hades_PackArt.jpg" alt="" style="height: 14rem;"> <br>
+      <span style="position: relative; left: 25%;">R$ 50,00</span> <br> <br>
+      <button class="genericButton continuar1">Continuar</button>
+    </div>
     <div class="h-wrapper">
       <div class="h-wrapper-image">
         <img src="assets/img/wallpaper-hades-game.png" alt="">
@@ -107,7 +106,7 @@
             </div>
 
             <div class="itemgrid-button" style="display: flex; flex-direction: column ;justify-content: center; align-items: center; border-left: 2px solid rgb(80, 19, 19); position: relative;">
-              <button class="genericButton buy1">COMPRAR</button>
+              <button class="genericButton buy1" onclick="add()">COMPRAR</button>
               <h5 style="margin-block: 2rem; margin-left: 5rem;">ou</h5>
               <a href="https://www.supergiantgames.com/games/hades/" target="_blank" class="genericButton buy2">Saiba Mais</a>
             </div>
